packages/typ/tests/fixtures/diagnostics/0441_modules_outer_hidden_annotation_mismatch_03.ml.expected
File "0441_modules_outer_hidden_annotation_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0441_modules_outer_hidden_annotation_mismatch_03 is not a valid module name.

File "0441_modules_outer_hidden_annotation_mismatch_03.ml", line 15, characters 14-34:
15 | let _ : int = Outer_gamma.Hidden.x
                   ^^^^^^^^^^^^^^^^^^^^
Error: The value Outer_gamma.Hidden.x has type Outer_gamma.Hidden.t
       but an expression was expected of type int
